# zenzop

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  FEEDBACK.md  LICENSE  README.crates.md  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: compress.rs
benchmarks/: README.md
docs/public-api/: ABLATION-zenzop.md  zenzop.features.txt  zenzop.internal.txt  zenzop.txt
examples/: count_cache_misses.rs  profile_squeeze.rs
src/: blocksplitter.rs  cache.rs  deflate.rs  gzip.rs  hash.rs  io.rs  katajainen.rs  lib.rs  lz77.rs  main.rs  squeeze.rs  symbols.rs  util.rs  zlib.rs
test/: run.sh
tests/: public_api_doc.rs
