[package]
name = "zenzop"
version = "0.3.1"
edition = "2024"
rust-version = "1.89"
description = "A faster fork of the Zopfli DEFLATE compressor with optional ECT-derived optimizations."
repository = "https://github.com/imazen/zenzop"
readme = "README.md"
license = "Apache-2.0"
keywords = ["compression", "deflate", "zopfli"]
categories = ["compression", "no-std"]
exclude = [
  ".github/*",
  ".gitignore",
  "Makefile",
  "benchmark-builds/*",
  "rustfmt.toml",
  "test/*",
]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "zenzop"
required-features = ["gzip", "std", "zlib"]

[dependencies]
enough = { version = "0.4", default-features = false }
log = { version = "0.4.28", optional = true }
rayon = { version = "1.10", optional = true }
zenflate = { version = "0.3", path = "../zenflate", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
miniz_oxide = "0.8.9"
proptest = "1.7.0"
proptest-derive = "0.7.0"
zopfli = "0.8"

[[example]]
name = "count_cache_misses"
required-features = ["std", "zlib"]

[[example]]
name = "profile_squeeze"
required-features = ["std", "zlib"]

[[bench]]
name = "compress"
harness = false

[features]
default = ["gzip", "std", "zlib"]
gzip = ["dep:zenflate"]
parallel = ["dep:rayon", "std"]
std = ["dep:log", "zenflate?/std"]
zlib = ["dep:zenflate"]

[profile.release]
debug = true

[profile.bench]
debug = true
